--- a/frontend/src/components/EditEventPage.css
+++ b/frontend/src/components/EditEventPage.css
@@ -1,3 +1,6 @@
+/* Import theme variables */
+@import '../styles/themes.css';
+
 /* Modern Responsive EditEventPage Design */
 
 .edit-event-container {
